Fix Nav component link display issue; enhance nav-item styles for better visibility and interaction

--- a/src/client/src/styles/main.scss
+++ b/src/client/src/styles/main.scss
@@ -125,15 +125,19 @@ body {
   background: #080603c4;
   box-shadow: 0px 9px 1rem 16px rgba(0, 0, 0, 0.32);
   backdrop-filter: blur(0.25rem);
-  li {
+  .nav-item {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: none;
   }
 
   &.active {
     height: auto;
     overflow-y: visible;
+    .nav-item {
+      display: block;
+    }
   }
 }
 
@@ -143,11 +147,19 @@ body {
   text-decoration: none;
   font-size: 0.9rem;
   transition: color 0.3s ease;
-  padding: 1rem 1rem 1rem 1.5rem;
+  padding: 1rem;
+  margin: 0.25rem 1rem;
   display: block;
-  background: linear-gradient(74deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.05));
+  background: linear-gradient(74deg, rgb(0 0 0 / 40%), rgba(0, 0, 0, 0.05));
+  border: 1px solid #ffffff12;
+  border-radius: 0.5rem;
   &:hover {
     color: #ff6347;
+  }
+
+  &:active {
+    border: 1px solid #ffffff4d;
+    text-shadow: 0px 0px 0.5rem #ffffffbd;
   }
 
   u {
@@ -173,6 +185,9 @@ header {
   h1 {
     color: $brandBlueAccent;
   }
+  .input {
+    margin-top: 2rem;
+  }
 }
 
 .input-group {
@@ -182,11 +197,11 @@ header {
   display: block;
   .icon-search {
     position: absolute;
-    left: 1rem;
+    left: 8px;
     top: 50%;
     transform: translateY(-50%);
-    width: 1rem;
-    height: 1rem;
+    width: 1.25rem;
+    height: 1.25rem;
     fill: #111111;
     pointer-events: none;
   }
